[package]
name = "libnfs"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
description = "Safe Rust bindings for libnfs — an NFS client library"
readme = "README.md"

[dependencies]
libc = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time"] }

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
